# sui-data-rust

./: Cargo.toml  README.md
src/: main.rs
