[package]
name = "producer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sui-sdk = { git = "https://github.com/MystenLabs/sui", branch = "devnet" }
futures = "0.3.26"
tokio = "1.25.0"
anyhow = "1.0.69"
serde = "1.0.152"
serde_json = "1.0.93"
env_logger = "0.9"
pulsar = "4.1.1"
# serde = { version = "1.0", features = ["derive"] }
# serde_json = "1.0"
# tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
log = "0.4.6"
# futures = "0.3"